--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
-  "name": "public-site",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://muhammedanas-neopraxis.github.io/public-static-site",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -12,10 +10,12 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.0",
-    "@heroicons/react": "^2.2.0",
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-parallax-tilt": "^1.7.269",
+    "react-router-dom": "^6.28.1",
+    "react-tsparticles": "^2.12.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -23,15 +23,17 @@
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
-    "daisyui": "^4.12.22",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
-    "gh-pages": "^6.2.0",
     "globals": "^15.13.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17",
+    "react-bootstrap": "^2.10.7",
+    "react-github-calendar": "^3.2.2",
+    "react-icons": "^4.8.0",
+    "react-pdf": "^5.7.1",
+    "typewriter-effect": "^2.18.2",
     "vite": "^6.0.3"
   }
 }
